@@ -541,6 +541,13 @@ name|groupIDX
 init|=
 literal|0
 decl_stmt|;
+name|float
+name|maxScore
+init|=
+name|Float
+operator|.
+name|MIN_VALUE
+decl_stmt|;
 for|for
 control|(
 name|SearchGroup
@@ -595,6 +602,10 @@ argument_list|<
 name|GROUP_VALUE_TYPE
 argument_list|>
 argument_list|(
+name|Float
+operator|.
+name|NaN
+argument_list|,
 name|topDocs
 operator|.
 name|getMaxScore
@@ -615,6 +626,20 @@ argument_list|,
 name|group
 operator|.
 name|sortValues
+argument_list|)
+expr_stmt|;
+name|maxScore
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+name|maxScore
+argument_list|,
+name|topDocs
+operator|.
+name|getMaxScore
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -646,6 +671,8 @@ argument_list|,
 name|totalGroupedHitCount
 argument_list|,
 name|groupDocsResult
+argument_list|,
+name|maxScore
 argument_list|)
 return|;
 block|}
