@@ -1053,7 +1053,7 @@ literal|5
 argument_list|,
 literal|true
 argument_list|,
-literal|false
+literal|true
 argument_list|,
 literal|true
 argument_list|)
@@ -1091,6 +1091,18 @@ argument_list|(
 literal|0
 argument_list|)
 decl_stmt|;
+name|assertFalse
+argument_list|(
+name|Float
+operator|.
+name|isNaN
+argument_list|(
+name|groups
+operator|.
+name|maxScore
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|7
@@ -2974,6 +2986,10 @@ argument_list|<
 name|BytesRef
 argument_list|>
 argument_list|(
+name|Float
+operator|.
+name|NaN
+argument_list|,
 name|mvalGd
 operator|.
 name|maxScore
@@ -3031,6 +3047,10 @@ name|size
 argument_list|()
 index|]
 argument_list|)
+argument_list|,
+name|Float
+operator|.
+name|NaN
 argument_list|)
 return|;
 block|}
@@ -4391,6 +4411,10 @@ argument_list|<
 name|BytesRef
 argument_list|>
 argument_list|(
+name|Float
+operator|.
+name|NaN
+argument_list|,
 literal|0.0f
 argument_list|,
 name|docs
@@ -4448,6 +4472,10 @@ argument_list|,
 name|totalGroupedHitCount
 argument_list|,
 name|result
+argument_list|,
+name|Float
+operator|.
+name|NaN
 argument_list|)
 argument_list|,
 name|knownGroups
@@ -4481,6 +4509,10 @@ argument_list|,
 name|totalGroupedHitCount
 argument_list|,
 name|result
+argument_list|,
+name|Float
+operator|.
+name|NaN
 argument_list|)
 return|;
 block|}
@@ -9632,6 +9664,12 @@ argument_list|,
 name|docOffset
 argument_list|,
 name|topNDocs
+argument_list|,
+name|TopGroups
+operator|.
+name|ScoreMergeMode
+operator|.
+name|None
 argument_list|)
 decl_stmt|;
 if|if
